# Cyber_Offense_and_Defense

./: .~lock.Sql injection to update.odt#  Insecure_des.odt  xpath_COD.odt
EXAM/: jwt1.py  jwt_creator.py  tokens.txt
EXAM/giftcard/: script.py  script2.py  script_session.py
EXAM/hashcat_password/: exploit.txt  hashes.txt  line_replace.py  rock_you_changed.txt  working_on_my_pc.txt
EXAM/sqlinj_credit_card/: exploit.txt
EXAM/xss/: exploit.txt
LABS/jwt/: jwt_secrets.txt  token.txt
authentication/2fa_broken_logic/: exploit.txt
authentication/2fa_simple_bypass/: exploit.txt
authentication/Broken_brute_force_protection_IP_block_3_wrong_attempt/: exploit.py
authentication/Broken_brute_force_protection_ultiple_credentials_per_request/: exploit.txt
authentication/Brute-forcing_stay-logged-in_cookie/: base64_cookies.txt  password_hashed_md5.txt  username_and_password_hashed.txt
authentication/Password brute_force_via_password_change/: exploit.txt
labs_scripts/: 2FA_bypass_bruteforce.py  brute_force_IP_block_3_attempt.py  bruteforce_IP-block_3_attempt.py  bruteforce_pass_changing.py  bruteforce_stay_logged_in_cookie.py  username_enumeration_subtly_different_respponse.py  username_enumeration_via_account_lock.py  username_enumeration_via_response_timing.py  username_enumeration_via_subtly_different_response.py  username_enumeration_via_timing_response.py
labs_scripts/authentication/username_enumeration_via_response_timing/: pyproject.toml
labs_scripts/authentication/username_enumeration_via_response_timing/username_enumeration_via_response_timing/: main.py
(+188 files in other folders)
