[tool.poetry]
name = "username-enumeration-via-response-timing"
version = "0.1.0"
description = ""
authors = ["Mario Alviano <mario.alviano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
lxml = "^4.9.3"
rich = "^13.6.0"
typer = {extras = ["all"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
